# mirror-afp-devel

./: .hgignore  .hgtags  README.md  ROOTS  empty_directory.txt
CVSROOT/: modules
admin/: common  cvs-sync  devel-copy  genROOTS  get-releases  hg-sync  mail-attach  main-config  make-web-devel  migrate-config  mira.py  mk_mira.py  mkstatus.py  prepare-release  publish  regression  report.pl  sitegen  sitegen-devel  sitegen-req.txt  sitegen.README  sitegen.py  status.tpl  testall  user-aliases  version
admin/components/: afp
admin/etc/: build.props
admin/java-lib/: pom.xml
admin/jenkins/: ci_build_afp.scala  ci_build_all.scala  ci_build_mac.scala  ci_build_slow.scala  ci_build_testboard.scala
doc/: maintenance.html  maintenance.md  regression-test.html  regression-test.md  the-archive.html  the-archive.md
etc/: build.props  options  settings  version
metadata/: README  README.md  authors.toml  authors.toml.orig  authors.toml.rej  download.tpl  entry.tpl  index.tpl  licenses.toml  metadata  release-dates  releases  releases.toml  statistics.tpl  status.tpl  topics  topics.toml  topics.tpl
thys/: COMPATIBILITY  LICENSE  ROOT  ROOTS
thys/FOL_Seq_Calc2/: .gitignore  .hlint.yaml  Completeness.thy  Countermodel.thy  Dockerfile  EPathHintikka.thy  Export.thy  Hintikka.thy  Makefile  Prover.thy  ProverLemmas.thy  README.md  ROOT  Results.thy  SeCaV.thy  Sequent1.thy  Sequent_Calculus_Verifier.thy  Soundness.thy  Usemantics.thy  secav-prover.cabal
thys/FOL_Seq_Calc2/document/: root.tex
thys/FOL_Seq_Calc2/haskell/app/: Main.hs
thys/FOL_Seq_Calc2/haskell/lib/: ProofExtractor.hs  ProverInstances.hs  SeCaVTranslator.hs  ShortAST.hs  ShortLexer.hs  ShortParser.hs  Unshortener.hs
thys/FOL_Seq_Calc2/test/completeness/: ROOT  Runner.hs  Tests.hs
thys/FOL_Seq_Calc2/test/soundness/: Runner.hs  Tests.hs
tools/: SmartStoplist.txt  afp_build  afp_build.scala  afp_build_ci.scala  afp_build_site.scala  afp_check_metadata.scala  afp_check_roots.scala  afp_churn_pie  afp_dependencies.scala  afp_mkroot  afp_publish.scala  afp_release.scala  afp_site_gen.scala  afp_stats.scala  afp_structure.scala  afp_submit.scala  afp_system.scala  afp_tool.scala  afp_tools.scala  hugo.scala  main.css  metadata.scala  python.scala  rake.scala  testafp  toml.scala  utils.scala  web_app.scala
web/: LICENSE  about.html  about.shtml  citing.html  citing.shtml  download.html  download.shtml  front.css  index.html  index.html.orig  index.json  index.shtml  index.xml  index.xml.orig  nav.html  rss.xml  script.js  search.html  search.shtml  sitemap.xml  sitemap.xml.orig  statistics.html  statistics.shtml  submit-template  submitting.html  submitting.shtml  topics.html  topics.shtml  topics2.shtml  updating.html  updating.shtml  using.html  using.shtml
(+44074 files in other folders)
